droneDeployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: drone1
spec:
  containers: 
    - name: drone1
      image: cyu72/drone:latest
      ports:
      - protocol: UDP
        containerPort: 65456
---
apiVersion: v1
kind: Pod
metadata:
  name: drone2
spec:
  containers: 
    - name: drone2
      image: cyu72/drone:latest
      ports:
      - protocol: UDP
        containerPort: 65456
---
apiVersion: v1
kind: Pod
metadata:
  name: drone3
spec:
  containers: 
    - name: drone3
      image: cyu72/drone:latest
      ports:
      - protocol: UDP
        containerPort: 65456
---
apiVersion: v1
kind: Pod
metadata:
  name: gcs
spec:
  containers: 
    - name: gcs
      image: cyu72/gcs:test
      stdin: true
      tty: true
      ports:
      - protocol: UDP
        containerPort: 65456
